# minions

./: .gitignore  .travis.yml  CNAME  CODE_OF_CONDUCT.md  README.md  execute_local.sh  roadmap.md
src/: BUILD  BUILD.bazel  BUILD.googleapi  WORKSPACE
src/go/goblins/: BUILD.bazel  common.go  common_test.go  fileutil.go  fileutil_test.go  local_goblin.go  outpututil.go  outpututil_test.go
src/go/goblins/docker/: BUILD.bazel  docker.go  docker_test.go
src/go/goblins/docker/runner/: BUILD.bazel  runner.go
src/go/goblins/local/runner/: BUILD.bazel  runner.go
src/go/grpcutil/: BUILD.bazel  grpcutil.go  grpcutil_test.go
src/go/grpcutil/testdata/: 127.0.0.1.crt  127.0.0.1.key  garbage  test_ca.crt
src/go/interests/: BUILD.bazel  interests.go  interests_test.go
src/go/minions/: BUILD.bazel  minion.go  minion_test.go  runner.go
src/go/minions/passwd/: BUILD.bazel  minion.go  minion_test.go  passwdfile.go  passwdfile_test.go
src/go/minions/passwd/runner/: BUILD.bazel  passwd.go
src/go/minions/redis/: BUILD.bazel  minion.go  minion_test.go
src/go/minions/redis/runner/: BUILD.bazel  redis.go
src/go/minions/redis/testdata/: redis.1.conf  redis.2.conf  redis.3.conf  redis.4.conf  redis.5.conf  redis.6.conf
src/go/minions/testminion/: BUILD.bazel  minion.go  minion_test.go
src/go/minions/testminion/runner/: BUILD.bazel  testminion.go
src/go/minions/tomcat/: BUILD.bazel  minion.go  minion_test.go  tomcat.go  tomcat_test.go
src/go/minions/tomcat/runner/: BUILD.bazel  tomcat.go
src/go/minions/vulners/: BUILD.bazel  minion.go  minion_test.go  osreleaseparser.go  osreleaseparser_test.go  testing.go  vulners_api.go  vulners_api_test.go
src/go/minions/vulners/dpkg/: BUILD.bazel  dpkg.go  dpkg_test.go
src/go/minions/vulners/rpm/: BUILD.bazel  rpm.go  rpm_test.go
src/go/minions/vulners/rpm/testdata/empty/: Packages
src/go/minions/vulners/rpm/testdata/vulnerable/: Packages
src/go/minions/vulners/runner/: BUILD.bazel  vulners.go
src/go/minions/vulners/testdata/: dpkg.txt  os-release.1.txt
src/go/overlord/: BUILD.bazel  overlord.go  overlord_test.go  statemanager.go  statemanager_test.go
src/go/overlord/interests/: BUILD.bazel  interests.go
src/go/overlord/runner/: BUILD.bazel  overlord_runner.go
src/go/overlord/state/: BUILD.bazel  statemanager.go  statemanager_test.go
src/goblins/: BUILD.bazel  local_goblin.go
src/google/api/: BUILD
src/java/main/org/minions_scanner/minions/: BUILD.bazel  MinionExecutor.java
src/java/main/org/minions_scanner/minions/rpm/: BUILD.bazel  OsReleaseParser.java  RpmMinion.java
src/java/test/java/org/minions_scanner/minions/rpm/: BUILD.bazel  OsReleaseParserTest.java
src/minions/: BUILD.bazel  minion.go  minions.proto
src/minions/vulners/: BUILD.bazel  minion.go  minion_test.go  vulners_api.go  vulners_api_test.go
src/minions/vulners/dpkg/: BUILD.bazel
src/minions/vulners/testdata/: os-release.2.txt
src/overlord/: BUILD  BUILD.bazel  overlord.go  overlord.proto  overlord_runner.go  overlord_test_client.go
src/overlord/runner/: BUILD.bazel  overlord_runner.go
src/proto/: BUILD  BUILD.bazel  findings.proto  minions.proto  overlord.proto
src/proto/minions/: BUILD.bazel  findings.proto  minions.proto
src/proto/overlord/: BUILD.bazel  overlord.proto
