package(default_visibility = ["//visibility:public"])
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_prefix")

go_prefix("github.com/google/minions")
gazelle(
    name = "gazelle",
    prefix = "github.com/google/minions",
    mode = "print"
)

load("@io_bazel_rules_go//go:def.bzl", "go_path")
go_path(
    # testonly helps to generate deps for tests
    testonly = 1,
    name = "gopath",
    mode = "link",
    deps = [
        "//goblins:go_default_library",
        "//minions:go_default_library",
        "//minions/vulners:go_default_library",
        "//minions/vulners:go_tests_library",
        "//overlord:go_default_library",
    ],
)
