# Gazelle does not understand multiple protos in a dir.
# gazelle:exclude proto

package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    command = "update",
    mode = "fix",
    prefix = "github.com/google/minions",
)

load("@io_bazel_rules_go//go:def.bzl", "go_path")

go_path(
    name = "gopath",
    # testonly helps to generate deps for tests
    testonly = 1,
    mode = "link",
    deps = [
        "//go/goblins:go_default_library",
        "//go/minions:go_default_library",
        "//go/minions/passwd:go_default_library",
        "//go/minions/redis:go_default_library",
        "//go/minions/tomcat:go_default_library",
        "//go/minions/vulners:go_default_library",
        "//go/minions/vulners:go_tests_library",
        "//go/minions/vulners/dpkg:go_default_library",
        "//go/overlord:go_default_library",
        "//proto/minions:go_default_library",
        "//proto/overlord:go_default_library",
    ],
)

load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

buildifier(
    name = "buildifier",
)
