load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["overlord.go"],
    importpath = "github.com/google/minions/overlord",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_golang_x_net//context:go_default_library",
        ":overlord_go_proto",
        "@google_uuid//:go_default_library"
    ],
)

proto_library(
    name = "overlord_proto",
    srcs = ["overlord.proto"],
    visibility = ["//visibility:public"],
    deps = ["//minions:minions_proto"],
)

go_proto_library(
    name = "overlord_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/google/minions/proto/overlord",
    proto = ":overlord_proto",
    visibility = ["//visibility:public"],
    deps = ["//minions:go_default_library"],
)
