load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_visibility = ["//visibility:public"],
)

load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "overlord_proto",
    srcs = ["overlord.proto"],
    deps = [
        ":findings_proto",
        ":minions_proto"
    ]

)

proto_library(
    name = "findings_proto",
    srcs = ["findings.proto"],
    deps = [
        # Use bazel query 'visible(//:*, kind(proto_library, @com_google_protobuf//:all))' for a list
        "@com_google_protobuf//:timestamp_proto"
    ],
)

proto_library(
    name = "minions_proto",
    srcs = ["minions.proto"],
    deps = [
        "@com_google_protobuf//:timestamp_proto",
        ":findings_proto"
    ]
)

go_proto_library(
    name = "overlord_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/google/minions/proto/overlord",
    proto = ":overlord_proto",
    deps = [
      ":minions_go_proto",
      ":findings_go_proto"
    ]
)

go_library(
    name = "overlord_go_library",
    embed = [":overlord_go_proto"],
    importpath = "github.com/google/minions/proto/overlord",
)

go_proto_library(
    name = "minions_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/google/minions/proto/minions",
    proto = ":minions_proto",
    deps = [
      ":findings_go_proto"
    ]
)

go_library(
    name = "minions_go_library",
    embed = [":minions_go_proto"],
    importpath = "github.com/google/minions/proto/minions",
)

go_proto_library(
    name = "findings_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/google/minions/proto/findings",
    proto = ":findings_proto",
)

go_library(
    name = "findings_go_library",
    embed = [":findings_go_proto"],
    importpath = "github.com/google/minions/proto/findings",
)
