# Goblins are the file-loaders feeding data to the overlord.

load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["local_goblin.go"],
    importpath = "github.com/google/minions/goblins",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/overlord:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "goblins",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
