# Goblins are the file-loaders feeding data to the overlord.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "fileutil.go",
        "outpututil.go",
    ],
    importpath = "github.com/google/minions/go/goblins",
    visibility = ["//visibility:public"],
    deps = [
        "//go/overlord/interests:go_default_library",
        "//proto/minions:go_default_library",
        "//proto/overlord:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "fileutil_test.go",
        "outpututil_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//proto/minions:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
