load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["interests.go"],
    importpath = "github.com/google/minions/go/interests",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/minions:go_default_library",
        "//proto/overlord:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["interests_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//require:go_default_library",
        "//proto/minions:go_default_library",
        "//proto/overlord:go_default_library",
    ],
)
