load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["minion.go"],
    embed = ["//proto/minions:minions_go_proto"],
    importpath = "github.com/google/minions/minions",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/minions:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ]
)
