load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "minion.go",
        "runner.go",
    ],
    importpath = "github.com/google/minions/go/minions",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/minions:go_default_library",
        "@com_github_patrickmn_go-cache//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["minion_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
