load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "minion.go",
        "vulners_api.go"],
    importpath = "github.com/google/minions/minions/vulners",
    visibility = ["//visibility:public"],
    deps = [
        "//minions:go_default_library",
        "//minions/vulners/dpkg:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@resty//:go_default_library"
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["vulners_api_test.go"],
    embed = [":go_default_library"],
)