load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "minion.go",
        "osreleaseparser.go",
        "vulners_api.go"],
    importpath = "github.com/google/minions/minions/vulners",
    visibility = ["//visibility:public"],
    deps = [
        "//minions:go_default_library",
        "//minions/vulners/dpkg:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@resty//:go_default_library"
    ],
)


# Awful ack to allow go path build to generate all dependencies.
# The duplication should not be necessary, except it is, otherwise
# the test won't see the tests to run (if used as deps)
go_library (
    name = "go_tests_library",
    srcs = [
        "minion_test.go",
        "osreleaseparser_test.go",
        "vulners_api_test.go",
    ],
    visibility = ["//visibility:public"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "minion_test.go",
        "osreleaseparser_test.go",
        "vulners_api_test.go",
    ],
    visibility = ["//visibility:public"],
    embed = [":go_default_library"],
    data = [
        ":testdata/os-release.1.txt",
        ":testdata/os-release.2.txt",
    ],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
