load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_binary(
    name = "runner",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "overlord_test_client",
    srcs = [
        "overlord_test_client.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//overlord:overlord_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_image(
    name = "overlord_docker",
    binary = ":runner",
)

go_library(
    name = "go_default_library",
    srcs = [
        "overlord_runner.go",
        "overlord_test_client.go",
    ],
    importpath = "github.com/google/minions/src/overlord/runner",
    visibility = ["//visibility:private"],
    deps = [
        "//overlord:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
