load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "minions_proto",
    srcs = [
        "findings.proto",
        "minions.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "minions_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/google/minions/proto/minions",
    proto = ":minions_proto",
    visibility = ["//visibility:public"],
# Gazelle says this is not needed. Testing.
#    deps = [
#       "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
#    ],
)

go_library(
    name = "go_default_library",
    embed = [":minions_go_proto"],
    importpath = "github.com/google/minions/proto/minions",
    visibility = ["//visibility:public"],
)

java_proto_library(
    name = "minions_java_proto",
    visibility = ["//visibility:public"],
    deps = [":minions_proto"],
)

java_grpc_library(
    name = "minions_java_proto_grpc",
    srcs = [":minions_proto"],
    visibility = ["//visibility:public"],
    deps = [":minions_java_proto"],
)
