load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "overlord_proto",
    srcs = ["overlord.proto"],
    visibility = ["//visibility:public"],
    deps = ["//proto/minions:minions_proto"],
)

go_proto_library(
    name = "overlord_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/google/minions/proto/overlord",
    proto = ":overlord_proto",
    visibility = ["//visibility:public"],
    deps = ["//proto/minions:go_default_library"],
)

go_library(
    name = "go_default_library",
    embed = [":overlord_go_proto"],
    importpath = "github.com/google/minions/proto/overlord",
    visibility = ["//visibility:public"],
)
