load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["minion.go"],
    importpath = "github.com/google/minions/go/minions/redis",
    visibility = ["//visibility:public"],
    deps = [
        "//proto/minions:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_phayes_permbits//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["minion_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//proto/minions:go_default_library",
        "@com_github_phayes_permbits//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
