load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_binary(
    name = "runner",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "overlord_docker",
    binary = ":runner",
)

go_library(
    name = "go_default_library",
    srcs = ["overlord_runner.go"],
    importpath = "github.com/google/minions/overlord/runner",
    visibility = ["//visibility:private"],
    deps = [
        "//go/overlord:go_default_library",
        "//proto/overlord:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
