load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["runner.go"],
    importpath = "github.com/google/minions/go/goblins/docker/runner",
    visibility = ["//visibility:private"],
    deps = [
        "//go/goblins:go_default_library",
        "//proto/minions:go_default_library",
        "//proto/overlord:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "runner",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
