load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["testminion.go"],
    importpath = "github.com/google/minions/go/minions/testminion/runner",
    visibility = ["//visibility:private"],
    deps = [
        "//go/minions:go_default_library",
        "//go/minions/testminion:go_default_library",
    ],
)

go_binary(
    name = "runner",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
