load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["dpkg.go"],
    importpath = "github.com/google/minions/go/minions/vulners/dpkg",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["dpkg_test.go"],
    embed = [":go_default_library"],
)
