load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["rpm.go"],
    importpath = "github.com/google/minions/minions/vulners/rpm",
    visibility = ["//visibility:public"],
    deps = [
      "@com_github_necomeshi_rpmlib//:go_default_library"
    ]
)
