load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["vulners.go"],
    importpath = "github.com/google/minions/go/minions/vulners/runner",
    visibility = ["//visibility:private"],
    deps = [
        "//go/minions:go_default_library",
        "//go/minions/vulners:go_tests_library",
    ],
)

go_binary(
    name = "runner",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
