java_binary(
    name = "rpm_minion",
    main_class = "org.minions_scanner.minions.rpm.RpmMinion",
    runtime_deps = [
        ":rpm",
        "@io_grpc_grpc_java//netty",
    ],
)

java_library(
    name = "rpm",
    srcs = ["RpmMinion.java"],
    deps = [
        "//java/main/org/minions_scanner/minions:minion_executor",
        "//proto/minions:minions_java_proto",
        "//proto/minions:minions_java_proto_grpc",
        "@com_sleepycat_je//jar",
        "@io_grpc_grpc_java//core",
        "@io_grpc_grpc_java//stub",
    ],
)
